website/static/css/custom.css
/* your custom css */

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

.fixedHeaderContainer {
  min-height: 60px;
}

header h2 {
  font-size: 36px;
  padding-top: 6px;
}

.navigationSlider {
  margin-top: 5px;
}

code {
  color: blue;
}

input::placeholder {
  color: #777;
}
#feedback-launcher {
  position: fixed;
  right: 30px;
  height: 50px;
  width: 50px;
  background-color: orange;
  border-radius: 50px;
  text-align: center;
  line-height: 50px;
  font-size: 45px;
  color: white;
  font-weight: bold;
  cursor: pointer;
  bottom: 30px;
  z-index: 9000;
}

body {
  position: relative;
  overflow-x: hidden;
}

